<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:background="@drawable/ugugu"
    android:paddingBottom="@dimen/_20sdp"
    tools:context="com.erp.recruitmentmanagment.recruitmentsystem.themesfragment.ThemeFiveFragment">

    <Button
        android:layout_weight="1"
        android:layout_height="@dimen/_10sdp"
        android:background="@drawable/stylebutton"
        android:text="@string/PersonalAppliaction"
        android:textAllCaps="false"
        android:textColor="#f0f0f0"
        android:textSize="@dimen/_15sdp"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/_250sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/personalapp"

        />

    <Button
        android:layout_weight="1"
        android:layout_height="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/_250sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/stylebutton"
        android:text="@string/Educations"
        android:textAllCaps="false"
        android:textColor="#f0f0f0"

        android:id="@+id/educations"

        />

    <Button
        android:layout_weight="1"
        android:layout_height="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/_250sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/stylebutton"
        android:text="@string/Experience"
        android:textAllCaps="false"
        android:textColor="#f0f0f0"

        android:id="@+id/experience"

        />

    <Button
        android:layout_weight="1"
        android:layout_height="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/_250sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/stylebutton"
        android:text="@string/Skills"
        android:textAllCaps="false"
        android:textColor="#f0f0f0"

        android:id="@+id/skills"

        />

    <Button
        android:layout_weight="1"
        android:layout_height="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/_250sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/stylebutton"
        android:text="@string/Other"
        android:textAllCaps="false"
        android:textColor="#f0f0f0"

        android:id="@+id/other"

        />

    <Button
        android:layout_weight="1"
        android:textSize="@dimen/_15sdp"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/_250sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="@dimen/_10sdp"
        android:background="@drawable/stylebutton"
        android:text="@string/Compine"
        android:textAllCaps="false"
        android:textColor="#f0f0f0"

        android:id="@+id/compine"

        />
</LinearLayout>
