<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlayout"
    tools:context="com.erpproject.enterpriseresourceplanning.erphr.warningalerts.project.erp.activity.DetailsActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbardetails"
        />

    <Spinner

        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="#fff"
        android:layout_below="@+id/toolbardetails"
        android:id="@+id/spinnerDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <LinearLayout
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_below="@+id/spinnerDevices"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:layout_weight="1"
        android:hint="@string/EnterNameEmployee"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/styleedittext"
        android:id="@+id/txtnameemployee"
        android:textStyle="bold"
        android:textColor="#000"
        android:paddingLeft="@dimen/_15sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


        <EditText
            android:paddingRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:hint="@string/Entercauseproblem"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/styleedittext"
            android:id="@+id/txtcauseproblem"
            android:textStyle="bold"
            android:textColor="#000"
            android:paddingLeft="@dimen/_15sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:background="@drawable/buttonshape"
            android:shadowColor="#1499A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:id="@+id/btnsendnotification"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_below="@+id/txtdate"
            android:textColor="#fff"
            android:textSize="@dimen/_15sdp"
            android:textAllCaps="false"
            android:text="@string/sendnotification"
            android:layout_marginLeft="@dimen/_60sdp"
            android:layout_marginRight="@dimen/_60sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>
